welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:8: warning: enclosing method positionFinale has result type Unit: return value discarded
      		{gauche(); bool = estFaceMur(); droite(); return bool}
                                                          ^SnakeBuggle:10: warning: enclosing method positionFinale has result type Unit: return value discarded
      		{droite(); bool = estFaceMur(); gauche(); return bool}
                                                          ^SnakeBuggle:12: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    else false
         ^SnakeBuggle:16: error: not found: value positionfinale
  while (!positionfinale()) {
          ^